# job-tracker

./: .dockerignore  .env.example  .gitignore  .prettierignore  2026-01-27-this-session-is-being-continued-from-a-previous-co.txt  DEBUG-AUTOFILL.md  Dockerfile  README.md  TRANSCRIPT_TESTING.md  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh  job-tracker.xpi
backend/: pyproject.toml  seed_data.py  seed_rounds.py
backend/alembic/: env.py
backend/alembic/versions/: 0ccd2c25e4cb_move_transcripts_to_rounds.py  0d7e13252286_add_missing_application_columns.py  2026_01_27_add_status_history.py  2026_01_27_add_status_order.py  2359baec93ce_add_job_leads_and_user_profiles.py  38dc3fecbac5_fix_json_type_for_postgresql_.py  3e450efb7235_add_streak_exhausted_at.py  50dd97924e9f_add_audit_log_table.py  823286b57444_seed_history_for_existing_applications.py  913e52a54449_redistribute_rejected_application_.py  a188cbf67b22_add_document_fields.py  a5dc88e4b7b6_add_streak_tracking.py  add_system_settings.py  c1f1dc6361b7_initial_schema.py  c25e8753ada4_add_city_country_to_user.py  ea8164b1705c_add_user_settings.py  fb5feec1a36e_add_missing_extraction_fields_to_.py
backend/app/: main.py
backend/app/api/: admin.py  ai_settings.py  analytics.py  application_history.py  applications.py  auth.py  dashboard.py  export.py  files.py  (+9 more)
backend/scripts/: check_postgres.py  test_with_postgres.sh
backend/tests/: conftest.py  test_api_endpoints.py  test_export.py  test_extraction_service.py  test_import.py  test_job_lead_model.py  test_settings.py  test_user_profile_model.py
(+206 files in other folders)
